Fixed bug 449575 - Menus steal focus hard in Qt por, r=vladimir